zarf/k8s/dev/netmux/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: netmux
  namespace: netmux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netmux
  template:
    metadata:
      labels:
        app: netmux
    spec:
      hostname: netmux
      containers:
        - name: netmux
          image: digitalcircle/netmux:arm64
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
