zarf/k8s/dev/netmux/sample-outbound-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-outbound
spec:
  ports:
    - port: 5432
      name: pgsql
      protocol: TCP
  selector:
    app: netmux
