zarf/k8s/dev/netmux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netmux
  namespace: netmux
spec:
  ports:
    - port: 8080
      name: netmux
      protocol: TCP
  selector:
    app: netmux
